feat(jdk26): add 4 new PR analysis documents - SuperWord, JNI, ICF, Compact Headers
Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>